New Website w/ all projects

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			<div style="background-color: black;">
 				<ul id="nav">
 					<li> <a href="index.html"> Home </a></li>
-					<li> <a href="piDayGame\piDayGame.html"> Pi Day </a> </li>
-					<li> <a href="rockPaperScissors\rockPaperScissors.html"> Rock, Paper, Scissors </a> </li>
+					<li> <a href="piDayGame.html"> Pi Day </a> </li>
+					<li> <a href="rockPaperScissors.html"> Rock, Paper, Scissors </a> </li>
 					<!--<li> <a href="Harveland Photos3.html"> Section 2 </a> </li>
 					<li> <a href="Harveland Photos4.html"> Section 3 </a> </li>
 					<li> <a href="Harveland Links.html"> Links </a></li>-->
